# libremidi_flutter

./: .gitignore  .pubignore  CHANGELOG.md  LICENSE  README.md  ffigen.yaml  pubspec.yaml
.github/workflows/: flutter.yml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/java/dev/celtera/libremidi/: MidiDeviceCallback.java  MidiDeviceStatusCallback.java
android/src/main/java/dev/celtera/libremidi_flutter/: LibremidiFlutterPlugin.java
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/libremidi_flutter_example/: MainActivity.kt
example/integration_test/: libremidi_flutter_test.dart
example/ios/Flutter/: Debug.xcconfig  Release.xcconfig
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart  midi_access.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugins.cmake
example/linux/runner/: my_application.cc
example/macos/Runner/: DebugProfile.entitlements  Release.entitlements
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: libremidi_flutter.podspec
ios/Classes/: libremidi_flutter.cpp
ios/libremidi_flutter/: Package.swift
ios/libremidi_flutter/Sources/libremidi_flutter/: libremidi_headers
lib/: libremidi_flutter.dart  libremidi_flutter_bindings_generated.dart
linux/: CMakeLists.txt
macos/: libremidi_flutter.podspec
macos/Classes/: libremidi_flutter.cpp
macos/libremidi_flutter/: Package.swift
macos/libremidi_flutter/Sources/libremidi_flutter/: libremidi_flutter.cpp  libremidi_flutter.h
macos/libremidi_flutter/Sources/libremidi_flutter/include/libremidi_flutter/: libremidi_flutter.h
src/: CMakeLists.txt  android_helpers.cpp  jni_shim.cpp  libremidi_flutter.cpp  libremidi_flutter.h
src/libremidi/backends/android/: helpers.hpp  midi_in.hpp  midi_out.hpp  observer.hpp
test/: hotplug_event_type_test.dart  midi_byte_construction_test.dart  midi_exception_test.dart  midi_message_test.dart  midi_transport_type_test.dart  rpn_nrpn_parser_test.dart
windows/: CMakeLists.txt
